<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <View
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/dissmiss" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_note"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/no_btn_shape"
        android:gravity="center"
        app:cornerRadius="25dp"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/yes_btn_shape"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"/>



</LinearLayout>