<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#838080"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:maxLines="2"
                android:text="@tools:sample/lorem/random"
                android:textColor="#EAEAEA"
                android:textSize="14sp"
                android:textStyle="normal"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/_3_april_2023"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    />

                <ImageView
                    android:id="@+id/archive_imv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    tools:background="@drawable/baseline_unarchive_24"
                    app:tint="@color/white"
                    android:contentDescription="@string/todo" />
                <ImageView
                    android:id="@+id/delete_imv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_delete_24"
                    app:tint="#CC1A1A"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/todo"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>